# teensy-midi-looper

./: .travis.yml  CMakeLists.txt  MidiLoopSequencer.cpp  MidiLoopSequencer.h  MidiWriter.cpp  MidiWriter.h  README.md  TFTPianoDisplay.cpp  TFTPianoDisplay.h  arduino-midi-writer.ino  build-sketches.sh  t36-midi-tft-rec.ino
Hardware/: README.md
Hardware/fritzing/components/: 2.2_ TFT 240x320.fzpz  Hobbytronics_MIDI_breakout_97f85760303f1fc9b9bf879f79cde3e8_15.fzp  ST3375_144_TFT_LCD_e83e8688b21a7f675b9bb0633fb7a368_4.fzp  Teensy 3.6 (Basic).fzpz
Software/: CMakeLists.txt  README.md  install-travis-ci-arduino.sh
Software/arduino/: CMakeLists.txt  hardware_serial.cpp  hardware_serial.h
Software/arduino/Adafruit/: Adafruit_GFX.cpp  Adafruit_GFX.h  TFTColorHelper.h  gfxfont.h  glcdfont.c
Software/arduino/SD/: File.cpp  SD.cpp  SD.h
Software/arduino/SD/utility/: SdFat.h  SdFile.cpp
Software/arduino/Teensy/: Print.cpp  Print.h
Software/arduino/cppQueue/: cppQueue.cpp  cppQueue.h
Software/common/: CMakeLists.txt  Delegate.h  ID3Reader.cpp  ID3Reader.h  MidiLoopSequencer.cpp  MidiLoopSequencer.h  MidiReader.cpp  MidiReader.h  MidiWriter.cpp  MidiWriter.h  TFTPianoDisplay.cpp  TFTPianoDisplay.h
Software/common/controls/: TFTFlashingIndicator.cpp  TFTFlashingIndicator.h  TFTLoopIndicator.cpp  TFTLoopIndicator.h  TFTSongPositionIndicator.cpp  TFTSongPositionIndicator.h  TFTSongTimeIndicator.cpp  TFTSongTimeIndicator.h
Software/common/sequencer/: SequencerTrack.cpp  SequencerTrack.h  Tempo.cpp  Tempo.h
Software/common/utils/: TFTColorHelper.cpp  TFTColorHelper.h
Software/common/views/: MidiLooperMainView.cpp  MidiLooperMainView.h
Software/test/TestSDReadWrite/TestSDReadWrite/: main.c
Software/test/TestSDReadWrite/TestSDReadWrite.xcodeproj/: project.pbxproj
Software/test/TestSDReadWrite/TestSDReadWrite.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Software/test/TestSDReadWrite/TestSDReadWrite.xcodeproj/project.xcworkspace/xcuserdata/johnsmith.xcuserdatad/: UserInterfaceState.xcuserstate
Software/test/TestSDReadWrite/TestSDReadWrite.xcodeproj/project.xcworkspace/xcuserdata/johnsmith.xcuserdatad/xcdebugger/: Expressions.xcexplist
Software/test/TestSDReadWrite/TestSDReadWrite.xcodeproj/xcuserdata/johnsmith.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Software/test/TestSDReadWrite/TestSDReadWrite.xcodeproj/xcuserdata/johnsmith.xcuserdatad/xcschemes/: xcschememanagement.plist
Software/x86/: AdafruitTFTMock.cpp  AdafruitTFTMock.h  CMakeLists.txt  runtests.cpp
Software/x86/mocks/: hardware_serial.cpp  hardware_serial.h
Software/xcode/TFTDisplayEmulator/: TFTDisplayEmulator.jucer
Software/xcode/TFTDisplayEmulator/Builds/MacOSX/: Adafruit_GFX_juce.cpp  Adafruit_GFX_juce.hpp  Info-App.plist
Software/xcode/TFTDisplayEmulator/Builds/MacOSX/TFTDisplayEmulator.xcodeproj/: project.pbxproj
Software/xcode/TFTDisplayEmulator/Builds/MacOSX/TFTDisplayEmulator.xcodeproj/project.xcworkspace/xcuserdata/johnsmith.xcuserdatad/: UserInterfaceState.xcuserstate
Software/xcode/TFTDisplayEmulator/Builds/MacOSX/TFTDisplayEmulator.xcodeproj/project.xcworkspace/xcuserdata/nicnewdigate.xcuserdatad/: UserInterfaceState.xcuserstate
Software/xcode/TFTDisplayEmulator/Builds/MacOSX/TFTDisplayEmulator.xcodeproj/project.xcworkspace/xcuserdata/nicnewdigate.xcuserdatad/xcdebugger/: Expressions.xcexplist
Software/xcode/TFTDisplayEmulator/Builds/MacOSX/TFTDisplayEmulator.xcodeproj/xcuserdata/johnsmith.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Software/xcode/TFTDisplayEmulator/Builds/MacOSX/TFTDisplayEmulator.xcodeproj/xcuserdata/johnsmith.xcuserdatad/xcschemes/: xcschememanagement.plist
Software/xcode/TFTDisplayEmulator/Builds/MacOSX/TFTDisplayEmulator.xcodeproj/xcuserdata/nicnewdigate.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Software/xcode/TFTDisplayEmulator/JuceLibraryCode/: JuceHeader.h
Software/xcode/TFTDisplayEmulator/Source/: Adafruit_GFX_juce.hpp  Main.cpp  MainComponent.cpp  TFTScreenEmulatorWindow.cpp  TFTScreenEmulatorWindow.hpp
midi/: midi_Defs.h
notes/eurorack/: README.md
tests/: hardware_serial.cpp  hardware_serial.h  mock_arduino.h  runtests.cpp
